--- a/index2.html
+++ b/index2.html
@@ -13,19 +13,21 @@
             <div class="logo">
                 <a href="#">DIGITAL</a>
             </div>
-            <div class="header-main">
-                <a href="#"class="home">Home</a>
-                <a href="#">About</a>
-                <a href="#">Blog</a>
-                <a href="#">Work</a>
-                <a href="#">Contact</a>
-            </div>
-            <div class="header-social">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-solid fa-basketball"></i></a>
-            </div>
+            <nav>
+                <div class="nav-main">
+                    <a href="#"class="home">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Work</a>
+                    <a href="#">Contact</a>
+                </div>
+                <div class="nav-social">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-solid fa-basketball"></i></a>
+                </div>
+            </nav>
         </div>
     </header>
 </body>
